--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,17 +1,17 @@
 spring:
-#  datasource:
-#    url: jdbc:h2:mem:test
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        #        show_sql: true
-#        format_sql: true
+  datasource:
+    url: jdbc:h2:mem:test # memory mode 로 동작합니다.
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create   # create-drop 을 하면 마지막에 다 drop 해줍니다.
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
 logging:
   level:
